--- a/terms-and-conditions/emp-mob-app-tnc.html
+++ b/terms-and-conditions/emp-mob-app-tnc.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset='utf-8'>
       <meta name='viewport' content='width=device-width'>
-      <title>Terms &amp; Conditions</title>
+      <title></title>
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
